baseUrl: 'http://binderhubdev.perfectartsys.tk/

--- a/tutorial.html
+++ b/tutorial.html
@@ -13375,7 +13375,7 @@ div#notebook {
 
     var interact = new window.NbInteract({
       spec: 'SamLau95/nbinteract-image/master',
-      baseUrl: 'https://mybinder.org',
+      baseUrl: 'http://binderhubdev.perfectartsys.tk/,
       provider: 'gh',
     })
     interact.prepare()
